k8s-manifest/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-test-api
  labels:
    app: springboot
spec:
  replicas: 1 
  selector:
    matchLabels: 
      app: springboot
  template:
    metadata:
      labels: 
        app: springboot
    spec:
      containers:
        - name: api-spring
          image: mbodji/api-spring-test:v2.0 
          ports:
            - containerPort: 8080
