k8s-manifest/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  labels:
    app: springboot
spec:
  selector:  
    app: springboot
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
